# fandwill-rust-sdk

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/fandwill-sdk/: Cargo.toml  README.md
crates/fandwill-sdk/src/: auth.rs  client.rs  error.rs  lib.rs  macros.rs  query.rs  response.rs
crates/fandwill-sdk/src/endpoints/: auth.rs  listings.rs  mod.rs
crates/fandwill-vo/: Cargo.toml  README.md
crates/fandwill-vo/src/: auth.rs  lib.rs  listings.rs  meta.rs  resources.rs  reviews.rs  users.rs  validation.rs
