[workspace]
resolver = "3"
members = ["crates/fandwill-vo", "crates/fandwill-sdk"]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Furlink"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/furlink/fandwil-rust-sdk"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
garde = { version = "0.22", features = ["derive", "email", "phone-number"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", default-features = false }
url = { version = "2.5", features = ["serde"] }
utoipa = { version = "5", features = ["chrono", "url"] }

fandwill-vo = { path = "./crates/fandwill-vo/" }
fandwill-sdk = { path = "./crates/fandwill-sdk/" }
