[package]
name = "fandwill-vo"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

description = "Serde, garde, and utoipa value objects for the Fandwill platform API."
readme = "README.md"
keywords = ["fandwill", "serde", "dto", "utoipa", "garde"]
categories = ["api-bindings", "data-structures"]

[dependencies]
serde.workspace = true
utoipa.workspace = true
chrono.workspace = true
url.workspace = true
garde.workspace = true
