[package]
name = "fandwill-vo"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

description = "Serde, garde, and utoipa value objects for the Fandwill platform API."
readme = "README.md"
keywords = ["fandwill", "serde", "dto", "utoipa", "garde"]
categories = ["api-bindings", "data-structures"]

[features]
default = ["garde", "utoipa"]
garde = ["dep:garde"]
utoipa = ["dep:utoipa"]

[dependencies]
serde.workspace = true
chrono.workspace = true
url.workspace = true
garde = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1.0"

